tdf#119502 dbahsql: Table without primary key..

should be migrated as well. HSQLDB (and possibly some other DBMS as
well) allow tables to be defined without a primary key. In that case, we
should make the first column primary.

Change-Id: I4b7e2e778029f5e1f5801c134697b014532d692e